# keyboard-input-capture

./: .read_exact(event_buf).unwrap();  Cargo.toml
src/: main.rs
