[package]
name = "keyboard-overlay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.28"
ahash = "0.8.11"
eframe = { version = "0.28.1", features = ["wgpu"] }
image = "0.25.1"
nohash-hasher = "0.2.0"
parking_lot = "0.12.3"
winit = "0.30.3"
